homework2 ver. 1.1